# quenais

./: .gitignore  INSTALL.md  README.md  environment.yml  install.sh  requirements-base.txt  requirements-dev.txt  requirements-quantum.txt  setup.cfg
cif_files/: TiO2.cif
notebooks/: FCIDUMP  dmrg.conf  dmrg.out  tutorial.ipynb
quenais/: __init__.py  cli.py  config.py  config_old.py
quenais/active_space/: finder.py
quenais/classical/: runner.py
quenais/embedding/: hamiltonian.py
quenais/quantum/: solver.py
quenais/utils/: cif_parser.py  regenerate_wrapper.py
quenais/visualization/: __init__.py  plots.py
tests/: README.md  test_config.py
