[metadata]
name = quenais
version = 0.1.0
description = Quantum Embedding for Strongly Correlated Molecules
license = Apache-2.0
python_requires = >=3.10

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.24
    scipy>=1.10
    matplotlib>=3.7

[options.extras_require]
quantum =
    qiskit>=1.0
    qiskit-aer>=0.14
    qiskit-addon-sqd>=0.5
    openfermion>=1.6
    ffsim>=0.0.50
dev =
    pytest>=7.4
    black>=23.0
    ruff>=0.1
[options.entry_points]
console_scripts =
    quenais-run = quenais.cli:run_pipeline